<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cache"
        android:icon="@drawable/ic_cache"
        android:title="@string/menu_cache"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history_favorite"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_history_favorite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>
